--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "4.0.0",
     "com.unity.render-pipelines.high-definition": "14.0.6",
     "com.unity.render-pipelines.universal": "14.0.6",
     "com.unity.shadergraph": "14.0.6",
